--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-hello
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/main.css">
+        <title>sample blog</title>
+    </head>
+    <body>
+        <section>
+            <h1>sample blog title</h1>
+            <ul>
+                <li><a href="pages/page1.html">page1</a></li>
+                <li><a href="pages/page2.html">page2</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <article>
+                <h3>article 1</h3>
+                <p>this is my home page. this is my home page. this is my home page. </p>
+                <p>this is second paragraph. this is second paragraph. this is second paragraph.</p>
+                <img src="img/intro-1666984048.jpg" alt="orange">
+            </article>
+            <article>
+                <h3>article 2</h3>
+                <p>this is my home page. this is my home page. this is my home page. </p>
+                <p>this is second paragraph. this is second paragraph. this is second paragraph.</p>
+                <img src="img/Red_Apple.jpg" alt="apple">
+            </article>
+        </section>
+    </body>
+</html>
