--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <h3>article 1</h3>
                 <p>this is my home page. this is my home page. this is my home page. </p>
                 <p>this is second paragraph. this is second paragraph. this is second paragraph.</p>
-                <img src="img/intro-1666984048.jpg" alt="orange">
+                <!--<img src="img/intro-1666984048.jpg" alt="orange">-->
             </article>
             <article>
                 <h3>article 2</h3>
                 <p>this is my home page. this is my home page. this is my home page. </p>
                 <p>this is second paragraph. this is second paragraph. this is second paragraph.</p>
-                <img src="img/Red_Apple.jpg" alt="apple">
+                <!--<img src="img/Red_Apple.jpg" alt="apple">-->
             </article>
         </section>
     </body>
