--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <section>
-            <h1>sample blog title</h1>
+            <h1>web_engineering_14・15</h1>
             <ul>
                 <li><a href="pages/page1.html">page1</a></li>
                 <li><a href="pages/page2.html">page2</a></li>
