--- a/index.html
+++ b/index.html
@@ -17,15 +17,11 @@
         <section>
             <article>
                 <h3>article 1</h3>
-                <p>this is my home page. this is my home page. this is my home page. </p>
-                <p>this is second paragraph. this is second paragraph. this is second paragraph.</p>
-                <!--<img src="img/intro-1666984048.jpg" alt="orange">-->
+                <img src="img/9.jpg" alt="⑨">
             </article>
             <article>
                 <h3>article 2</h3>
-                <p>this is my home page. this is my home page. this is my home page. </p>
-                <p>this is second paragraph. this is second paragraph. this is second paragraph.</p>
-                <!--<img src="img/Red_Apple.jpg" alt="apple">-->
+                <img src="img/king.png" alt="k">
             </article>
         </section>
     </body>
